@@ -5,8 +5,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - turn of strip of httpd in Apache's install.sh
 
-- method handler called when it shouldn't be? (Ken)
-
 - <perl> sections and DirectoryIndex (Eric Cholet)
 
 - Perl{Set,Pass}Env tainted, should they not be? (Vivek)
